crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@accepts_group_changeset_covering_multiple_members.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core",
    "other"
  ],
  "changedPaths": [
    "crates/core/src/lib.rs",
    "crates/other/src/lib.rs",
    ".changeset/feature.md"
  ],
  "changesetPaths": [
    ".changeset/feature.md"
  ],
  "comment": null,
  "coveredPackageIds": [
    "core",
    "other"
  ],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [
    "crates/core/src/lib.rs",
    "crates/other/src/lib.rs"
  ],
  "matchedSkipLabels": [],
  "required": true,
  "status": "passed",
  "summary": "changeset verification passed: attached changesets cover 2 changed packages",
  "uncoveredPackageIds": []
}
