crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@fails_when_changeset_targets_wrong_group.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core"
  ],
  "changedPaths": [
    "crates/core/src/lib.rs",
    ".changeset/feature.md"
  ],
  "changesetPaths": [
    ".changeset/feature.md"
  ],
  "comment": "[multiline text]",
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [
    "changed packages are not covered by attached changesets: core"
  ],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [
    "crates/core/src/lib.rs"
  ],
  "matchedSkipLabels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncoveredPackageIds": [
    "core"
  ]
}
