crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@ignores_configured_package_changelog_paths.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [],
  "changedPaths": [
    "crates/core/changelog.md"
  ],
  "changesetPaths": [],
  "comment": null,
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [
    "crates/core/changelog.md"
  ],
  "labels": [],
  "matchedPaths": [],
  "matchedSkipLabels": [],
  "required": false,
  "status": "not_required",
  "summary": "changeset verification passed: no configured packages were affected by the changed files",
  "uncoveredPackageIds": []
}
