crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@reports_not_required_for_non_package_changes.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [],
  "changedPaths": [
    "docs/readme.md"
  ],
  "changesetPaths": [],
  "comment": null,
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [],
  "matchedSkipLabels": [],
  "required": false,
  "status": "not_required",
  "summary": "changeset verification passed: no configured packages were affected by the changed files",
  "uncoveredPackageIds": []
}
