crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@reports_uncovered_packages_when_changeset_is_partial.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core",
    "other"
  ],
  "changedPaths": [
    "crates/core/src/lib.rs",
    "crates/other/src/lib.rs",
    ".changeset/feature.md"
  ],
  "changesetPaths": [
    ".changeset/feature.md"
  ],
  "comment": "[multiline text]",
  "coveredPackageIds": [
    "core"
  ],
  "enforce": false,
  "errors": [
    "changed packages are not covered by attached changesets: other"
  ],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [
    "crates/core/src/lib.rs",
    "crates/other/src/lib.rs"
  ],
  "matchedSkipLabels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncoveredPackageIds": [
    "other"
  ]
}
