crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@respects_package_additional_paths.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core"
  ],
  "changedPaths": [
    "Cargo.lock"
  ],
  "changesetPaths": [],
  "comment": "[multiline text]",
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [
    "changed packages are not covered by attached changesets: core"
  ],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [
    "Cargo.lock"
  ],
  "matchedSkipLabels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncoveredPackageIds": [
    "core"
  ]
}
