crates/monochange/tests/snapshots/affected__affected_scenarios_match_snapshot@respects_package_ignored_paths.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [],
  "changedPaths": [
    "crates/core/tests/smoke.rs"
  ],
  "changesetPaths": [],
  "comment": null,
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [
    "crates/core/tests/smoke.rs"
  ],
  "labels": [],
  "matchedPaths": [],
  "matchedSkipLabels": [],
  "required": false,
  "status": "not_required",
  "summary": "changeset verification passed: no configured packages were affected by the changed files",
  "uncoveredPackageIds": []
}
